Add menu and fix minor bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<lib-menu></lib-menu>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
