--- a/libs/pages/home/src/lib/home/home.component.html
+++ b/libs/pages/home/src/lib/home/home.component.html
@@ -1,2 +1,8 @@
-<h1>Welcome to the Home Page</h1>
-<p>Everything starts here.</p>
+<div>
+    <h1>Hello, I'm <span>Evgenii Solovev</span></h1>
+    <p>
+        A Frontend Developer specializing in Angular, dashboard admirer, coop
+        boardgames <s>connos..</s> <s>conossa..</s> connossoir!.
+    </p>
+    <a routerLink="/wishlist" class="btn p-button p-button-rounded">View My Work</a>
+</div>
