--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<lib-menu></lib-menu>
+<p-menubar [model]="menuItems"></p-menubar>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
