Add wish-list component

--- a/libs/shared/wish-card/src/lib/wish-card/wish-card.component.html
+++ b/libs/shared/wish-card/src/lib/wish-card/wish-card.component.html
@@ -1,6 +1,6 @@
-<p-card [header]="name">
+<p-card [header]="wish.name">
   <ng-template pTemplate="header">
-      <img alt="Card" [src]="image" />
+      <img alt="Card" [src]="wish.image" />
   </ng-template>
   <ng-template pTemplate="footer">
       <div class="flex gap-3 mt-1">
