--- a/libs/features/wish-list/src/lib/wish-list/wish-list.component.html
+++ b/libs/features/wish-list/src/lib/wish-list/wish-list.component.html
@@ -18,9 +18,39 @@
           {{ '$' + wish.price }}
         </div>
         <span>
-          <p-button icon="pi pi-shopping-cart" styleClass="ml-2" />
+          <p-button
+            icon="pi pi-shopping-cart"
+            styleClass="ml-2"
+            (onClick)="showDialog(wish)"
+          />
         </span>
       </div>
     </div>
   </ng-template>
 </p-carousel>
+
+<p-dialog header="Header" [(visible)]="dialogVisible" [modal]="true">
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold white-space-nowrap">
+        {{ selectedWish?.name }}
+      </span>
+    </div>
+  </ng-template>
+  <span class="p-text-secondary block mb-5">price = {{ selectedWish?.price }}</span>
+  <span class="p-text-secondary block mb-5">raised = {{ selectedWish?.raised }}</span>
+  <ng-template pTemplate="footer">
+    <p-button
+      label="Copy"
+      [text]="true"
+      severity="secondary"
+      (onClick)="dialogVisible = false"
+    />
+    <p-button
+      label="Make an offer"
+      [outlined]="true"
+      severity="secondary"
+      (onClick)="dialogVisible = false"
+    />
+  </ng-template>
+</p-dialog>
