Create separate navigation component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<p-menubar [model]="menuItems"></p-menubar>
-<div class="content">
-  <router-outlet></router-outlet>
-</div>
+<lib-navigation-menu></lib-navigation-menu>
+<router-outlet></router-outlet>
