--- a/libs/features/navigation-menu/src/lib/navigation-menu.component.html
+++ b/libs/features/navigation-menu/src/lib/navigation-menu.component.html
@@ -1,1 +1,23 @@
-<p-menubar [model]="menuItems"></p-menubar>
+<p-menubar [model]="menuItems">
+  <ng-template pTemplate="end">
+    <button
+      pButton
+      label="Sign In"
+      class="p-button-sm mr-2"
+      (click)="onSignIn()"
+    ></button>
+    <button
+      pButton
+      label="Sign Up"
+      class="p-button-sm p-button-outlined"
+      (click)="onSignUp()"
+    ></button> </ng-template
+></p-menubar>
+
+<p-dialog header="Sign Up" [modal]="true" [(visible)]="signUpVisible">
+  <lib-sign-up-modal></lib-sign-up-modal>
+</p-dialog>
+
+<p-dialog header="Sign In" [modal]="true" [(visible)]="signInVisible">
+  <lib-sign-in-modal></lib-sign-in-modal>
+</p-dialog>
